# jaxlpips

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml  test-python-publish.yml  test.yml
scripts/: convert_alexnet.py  convert_vgg.py
src/jaxlpips/: __init__.py  lpips.py  utils.py
src/jaxlpips/modules/: __init__.py  alexnet.py  vgg.py
tests/: test_lpips.py
tests/data/: test_imgs.npy
