[project]
name = "jaxlpips"
version = "1.0.0"
description = "LPIPS perceptual loss for JAX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.10.6",
    "huggingface-hub>=0.31.1",
    "jax>=0.6.0",
    "safetensors>=0.5.3",
]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
    "lpips>=0.1.4",
    "pytest>=8.3.5",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.ruff]
line-length = 100
